feat(backend): implement global search, secure endpoints, and update core infrastructure, minor codebase cleanups